--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container-1">
                    <div class="box-1">
-                       <h3>Box-1</h3>
+                       <h3>Box-1 &#10066;</h3>
                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud e
                            xercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure d
